Changing path of css for doc

--- a/README
+++ b/README
@@ -45,3 +45,8 @@ Building on the root concept of the web.
 Every piece of information has its own Url. Cache, bookmark, index and link...
 
 Front ends on top of the API
+
+Google Sky View Production Server Key
+--------------------------------------
+
+ABQIAAAAVGHgv2pouycqhAw5tCmtChRUEqzWmCBjYYhr3pAAB1-qbxF2ORS71VNJWPXhtTrP99ACOXUleuYOBg
