--- a/README
+++ b/README
@@ -35,6 +35,11 @@ Count words in file. One per line
 
 cat * | grep -c string
 
+Node friendly Hosting services
+------------------------------
+
+EC2, heroku, joyent
+
 Keep in mind. 
 -------------
 
@@ -86,18 +91,19 @@ Building on the root concept of the web. Resource linking
 
 Every piece of information has its own Url. Cache, bookmark, index and link...
 
-Front ends on top of the API
+Front ends on top of the API. Show off concept with iPad application interacting with desktop browser
 
 Google Sky View Production Server Key
 --------------------------------------
 
 ABQIAAAAVGHgv2pouycqhAw5tCmtChRUEqzWmCBjYYhr3pAAB1-qbxF2ORS71VNJWPXhtTrP99ACOXUleuYOBg
 
-
 Reasons iframes
 ----------------
 
 Sandboxing: No global state leak
+
+Gadget developers get to pick whatever libraries they prefer.
 
 ASCOT Data Core Concept
 ------------------------
@@ -122,5 +128,14 @@ XML is verbose. We plan to deal with big data sets. XML introduce an overhead in
 
 XML is ugly and complex for programmers. Reading and writing XML is unpleasant.
 
+Communications Libraries
+------------------------
+
+NowJS - Current. Loss of messages, disconnections and slow with big pieces of data. 
+Faye - Bayeux Protocol
+Juggernaut - Separated Server
+pubsub.io - No channels. Subscribers provide queries and receive data satisfying those queries. Interesting concept.
+
+I would like to get hard numbers to compare performance of the different solutions.
 
  
