Polishing out UI style

--- a/README
+++ b/README
@@ -114,6 +114,8 @@ Web based data processing platform: Pull data from a wide array of sources, inte
 
 Lazy data modeling: Instead of trying to guess the future we store data "as-is" and deal with transformation when a necessary use case arises. 
 
+Ascot enables users to receive immediate feedback for any contributions. It reduces the feedback look.
+
 ASCOT Usability Philosophy
 --------------------------
 
